Login/Logout Functionality

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Welcome to <%=name%></title>
-    <link rel="stylesheet"  type="text/css" href="/main.css" />
+    <link rel="stylesheet"  href="/main.css" />
   </head>
   <body>
     <h1>Welcome to <%=name%></h1>
@@ -11,5 +11,6 @@
     <p><a href="viewtasks">View Tasks</a></p>
     <p><a href="register"> Register</a></p>
     <p><a href="login" >Login</a></p>
+    <p> <a href="logout">Logout</a></p>
   </body>
 </html>
