--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,6 +5,13 @@
     <link rel="stylesheet"  type="text/css" href="/main.css" />
   </head>
   <body>
+    <header>
+      <div class="menu">
+        <li><a href="/">Home</a></li>
+        <li><a href="register">Register</a></li>
+        <li><a href="login">Login</a></li>
+    </div>
+    </header>
     <h1>Register for <%=name%></h1>
     <form method="POST" action="/registered">
         <p>First Name: <input id="first" type="text" name="first"/></p>
