--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,10 +5,17 @@
         <link rel="stylesheet"  type="text/css" href="/main.css" />
     </head>
     <body>
-        <h1>Login for <%=name%></h1>
+        <header>
+            <div class="menu">
+                <li><a href="/">Home</a></li>
+              <li><a href="register">Register</a></li>
+              <li><a href="login">Login</a></li>
+          </div>
+          </header>
+        <h1 id="h1_login">Login for <%=name%></h1>
         <form method="POST" action="/loggedin">
-            <p>Username: <input id="username" type="text" name="username"/></p>
-            <p>Password: <input id="password" type="text" name="password"/></p>
+            <p id="login_parameter">Username: <input id="username" type="text" name="username"/></p>
+            <p id="login_parameter">Password: <input id="password" type="text" name="password"/></p>
             <input type="submit" value="Login" />
         </form>
     </body>
