Added delete task and CSS to tasks

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,10 +12,10 @@
               <li><a href="login">Login</a></li>
           </div>
           </header>
-        <h1 id="h1_login">Login for <%=name%></h1>
+        <h1>Login for <%=name%></h1>
         <form method="POST" action="/loggedin">
             <p id="login_parameter">Username: <input id="username" type="text" name="username"/></p>
-            <p id="login_parameter">Password: <input id="password" type="text" name="password"/></p>
+            <p id="login_parameter">Password: <input id="password" type="password" name="password"/></p>
             <input type="submit" value="Login" />
         </form>
     </body>
