--- a/public/main.css
+++ b/public/main.css
@@ -14,7 +14,7 @@ body {
 .menu {
     display: flex;
     justify-content: flex-end;
-    list-style: none; /* Assuming you want to remove bullet points */
+    list-style: none; 
 }
 
 .menu li {
@@ -23,7 +23,6 @@ body {
     opacity: 0;
     display: inline-block;
     margin-right: 10px;
-    /* margin-left: auto; is not necessary here */
 }
 
 
@@ -37,3 +36,96 @@ body {
   #welcome {
     font-size: 50px;
   }
+
+  ul {
+    list-style: none;
+}
+
+ul li {
+    margin-bottom: 15px;
+}
+form {
+    max-width: 500px;
+    margin: 20px auto;
+    padding: 20px;
+    background: rgba(24, 39, 59, 0.9);
+    border-radius: 10px;
+}
+
+form p {
+    margin: 10px 0;
+}
+
+input {
+    width: 100%;
+    padding: 8px;
+    margin: 6px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=submit] {
+    width: 100%;
+    background-color: rgb(94, 145, 130);
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: rgb(123,216,189);
+}
+
+.task-item {
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(123,216,189); /* Subtle shadow for depth */
+    padding: 15px;
+    margin-bottom: 15px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transition for hover effect */
+}
+
+.task-item:hover {
+    transform: translateY(-3px); /* Slight lift on hover */
+}
+
+.task-details, .status-update-form {
+    margin: 10px;
+}
+  
+.button {
+    background-color: #4CAF50; /* Green background */
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 8px;
+    transition: background-color 0.3s, transform 0.2s; /* Smooth transition for hover effect */
+}
+
+.button:hover {
+    background-color: #45a049; /* Darker shade of green */
+    transform: scale(1.05); /* Slight increase in size */
+}
+
+  
+
+@media screen and (max-width: 600px) {
+    .menu {
+        flex-direction: column;
+        align-items: flex-end;
+    }
+
+    .task-item {
+        flex-direction: column;
+    }
+}
