--- a/views/addtasks.ejs
+++ b/views/addtasks.ejs
@@ -4,23 +4,6 @@
     <title>Add Task for <%= name %></title>
     <link rel="stylesheet" type="text/css" href="/main.css" />
 
-    <script>
-      function validateForm() {
-        var dueDate = document.getElementById('dueDate').value;
-        var endTime = document.getElementById('end').value;
-
-        // Combine due date and end time for comparison
-        var dueDateTime = new Date(dueDate + 'T' + endTime);
-
-        if (dueDateTime < new Date()) {
-          alert('End time must be after the current time.');
-          return false;
-        }
-
-        return true;
-      }
-    </script>
-
     
   </head>
   <body>
@@ -37,8 +20,7 @@
         <p>Task Name: <input id="taskName" type="text" name="taskName"/></p>
         <p>Course: <input id="course" type="text" name="course"/></p>
         <p>Due Date: <input id="dueDate" type="date" name="dueDate"/></p>
-        <p>Time Start: <input id="start" type="time" name="startTime"/></p>
-        <p>Time End: <input id="end" type="time" name="endTime"/></p>
+        <p>Duration (minutes): <input id="duration" type="number" name="durationMinutes" min="0"/></p>
         <p>Priority: 
            <select id="priority" name="priority">
                <option value="low">Low</option>
