--- a/views/register.ejs
+++ b/views/register.ejs
@@ -18,7 +18,7 @@
         <p>Last Name: <input id="last" type="text" name="last"/></p>
         <p>Email: <input id="email" type="email" name="email"/></p>
         <p>Username: <input id="username" type="text" name="username"/></p>
-        <p>Password: <input id="password" type="text" name="password"/></p>
+        <p>Password: <input id="password" type="password" name="password"/></p>
         <input type="submit" value="Register" />
       </form>
   </body>
