--- a/views/addtasks.ejs
+++ b/views/addtasks.ejs
@@ -12,6 +12,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="addtasks">Add Tasks</a></li>
         <li><a href="viewtasks">View Tasks</a></li>
+        <li><a href="focus">Focus</a></li>
         <li><a href="logout">Logout</a></li>
       </div>
     </header>
