--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="addtasks">Add Tasks</a></li>
             <li><a href="viewtasks">View Tasks</a></li>
+            <li><a href="focus">Focus</a></li>
             <li><a href="logout">Logout</a></li>
           <% } else { %>
             <li><a href="/">Home</a></li>
