--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <link href="https://fonts.cdnfonts.com/css/public-pixel" rel="stylesheet">
     <title>Register for <%=name%></title>
     <link rel="stylesheet"  type="text/css" href="/main.css" />
   </head>
