--- a/views/addtasks.ejs
+++ b/views/addtasks.ejs
@@ -1,10 +1,16 @@
 <!doctype html>
 <html>
   <head>
-    <title>Add Task for <%= name %></title>
+    <link href="https://fonts.cdnfonts.com/css/public-pixel" rel="stylesheet">
+    <title>Add Task></title>
     <link rel="stylesheet" type="text/css" href="/main.css" />
-
-    
+    <script>
+      function toggleCourseInput() {
+        var courseSelect = document.getElementById('courseSelect');
+        var newCourseInput = document.getElementById('newCourse');
+        newCourseInput.style.display = courseSelect.value === 'newCourse' ? 'block' : 'none';
+      }
+    </script>
   </head>
   <body>
     <header>
@@ -16,10 +22,22 @@
         <li><a href="logout">Logout</a></li>
       </div>
     </header>
-    <h1>Add Task for <%= name %></h1>
+    <h1>Add Task</h1>
     <form method="POST" action="/addedtask">
         <p>Task Name: <input id="taskName" type="text" name="taskName"/></p>
-        <p>Course: <input id="course" type="text" name="course"/></p>
+        <p>Course: 
+          <select id="courseSelect" name="courseSelect" onchange="toggleCourseInput()">
+              <% if (courses.length > 0) { %>
+                  <% courses.forEach(function(course) { %>
+                      <option value="<%= course.course_name %>"><%= course.course_name %></option>
+                  <% }); %>
+              <% } %>
+              <option value="newCourse">Add New Course...</option>
+          </select>
+        </p>
+        <p id="newCourse" style="display:none;">New Course: <input type="text" name="newCourseName"/></p>
+        
+        <p id="newCourse" style="display:none;">New Course: <input type="text" name="newCourseName"/></p>
         <p>Due Date: <input id="dueDate" type="date" name="dueDate"/></p>
         <p>Duration (minutes): <input id="duration" type="number" name="durationMinutes" min="0"/></p>
         <p>Priority: 
