--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,10 @@
 <!doctype html>
 <html>
   <head>
-    <link href="https://fonts.googleapis.com/css2?family=NTR&display=swap" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/public-pixel" rel="stylesheet">
     <title>Welcome to <%=name%></title>
     <link rel="stylesheet" href="/main.css" />
   </head>
-  
   <body>
     <header>
       <div class="menu">
@@ -24,7 +23,7 @@
     </header>
 
     <% if (username) { %>
-      <h1 id ="welcome">Weclome Back <%=(username)%></h1>
+      <h1 id ="welcome">Welcome Back <%=(username)%></h1>
       <% } else { %>
     <h1 id = "welcome">Welcome to <%=name%></h1>
     <% } %>
