--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="https://fonts.cdnfonts.com/css/public-pixel" rel="stylesheet">
+
         <title>Login for <%=name%></title>
         <link rel="stylesheet"  type="text/css" href="/main.css" />
     </head>
