--- a/views/addtasks.ejs
+++ b/views/addtasks.ejs
@@ -4,18 +4,7 @@
     <link href="https://fonts.cdnfonts.com/css/public-pixel" rel="stylesheet">
     <title>Add Task</title>
     <link rel="stylesheet" type="text/css" href="/main.css" />
-    <script>
-      function showCourseSelection() {
-        document.getElementById('existingCourseSelect').style.display = 'block';
-        document.getElementById('newCourseInput').style.display = 'none';
-      }
-
-      function showNewCourseInput() {
-        document.getElementById('existingCourseSelect').style.display = 'none';
-        document.getElementById('newCourseInput').style.display = 'block';
-      }
-    
-    </script>
+    <script src="/script.js"></script>
   </head>
   <body>
     <header>
