--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
     <link href="https://fonts.cdnfonts.com/css/public-pixel" rel="stylesheet">
     <title>Welcome to <%=name%></title>
     <link rel="stylesheet" href="/main.css" />
+    <script src="/script.js"></script>
   </head>
   <body>
     <header>
@@ -27,5 +28,12 @@
       <% } else { %>
     <h1 id = "welcome">Welcome to <%=name%></h1>
     <% } %>
+
+    <div class="quote-container">
+      <h2>Daily Stoic Quote</h2>
+      <p id="stoicQuote">Loading quote...</p>
+  </div>
+
+
   </body>
 </html>
