--- a/public/main.css
+++ b/public/main.css
@@ -10,7 +10,7 @@ a:hover {
     color: rgb(145,252,220);
 }
 body {
-    background-color: rgb(14,25,45);
+    background-color: #222;
     color: rgb(206,214,243);
     font-family: 'Public Pixel', sans-serif;
 }
@@ -41,6 +41,9 @@ body {
     font-size: 50px;
   }
 
+
+
+
   ul {
     list-style: none;
 }
@@ -52,7 +55,7 @@ form {
     max-width: 500px;
     margin: 20px auto;
     padding: 20px;
-    background: rgba(24, 39, 59, 0.9);
+    background-color: #222;
     border-radius: 10px;
 }
 
@@ -68,67 +71,56 @@ input {
     border: 1px solid #000; /* Solid black border for 8-bit style */
     box-sizing: border-box;
     font-family: 'PixelatedFont', sans-serif; /* Pixelated font */
-    box-shadow: inset -4px -4px 0px 0px #4AA52E; /* Pixel shadow effect */
+    box-shadow: inset -4px -4px 0px 0px #41cdac; /* Pixel shadow effect */
 }
 
 input[type=submit] {
     width: 100%;
-    background-color: #92CD41; /* Green background */
+    background-color: #41cdac; /* Green background */
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
     cursor: pointer;
     font-family: 'PixelatedFont', sans-serif; /* Pixelated font */
-    box-shadow: inset -4px -4px 0px 0px #4AA52E; /* Pixel shadow effect */
+    box-shadow: inset -4px -4px 0px 0px #41cdac; /* Pixel shadow effect */
 }
 
 input[type=submit]:hover {
     background-color: #76c442; /* Slightly different green on hover */
-    box-shadow: inset -6px -6px 0px 0px #4AA52E; /* Increased shadow on hover */
+    box-shadow: inset -6px -6px 0px 0px #41cdac; /* Increased shadow on hover */
 }
 
 button {
-    width: 100%;
-    background-color: #92CD41; /* Green background */
+    width: 20%;
+    background-color: #41cdac; /* Green background */
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
     cursor: pointer;
     font-family: 'PixelatedFont', sans-serif; /* Pixelated font */
-    box-shadow: inset -4px -4px 0px 0px #4AA52E; /* Pixel shadow effect */
+    box-shadow: inset -4px -4px 0px 0px #41cdac; /* Pixel shadow effect */
 }
 
 button:hover {
     background-color: #76c442; /* Slightly different green on hover */
-    box-shadow: inset -6px -6px 0px 0px #4AA52E; /* Increased shadow on hover */
-}
-
-
-.is-dragging {
-    box-shadow: 0px 5px 15px rgba(0, 200, 200, 0.25);
+    box-shadow: inset -6px -6px 0px 0px #41cdac; /* Increased shadow on hover */
 }
 
 
 
-.columns {
-    display: flex;
-    align-items: flex-start;
-    justify-content: start;
-    gap: 16px;
-    padding: 24px 32px;
-    overflow: scroll;
+
+
+.courseButtonContainer {
+    /* display: flex; */
+    justify-content: space-between;
+    width: 100%;
 }
-.swim-lane {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch; 
-    gap: 8px; 
-    padding: 12px; /* Padding inside swim-lane */
-    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
-    border-radius: 4px;
-    width: 25%; 
-    min-height: 120px;
+
+.course-button {
+    size: 100%;
+    min-width: 50%;
 }
+
 
 .task-item {
     box-sizing: border-box; 
@@ -177,5 +169,5 @@ input[type=date] {
     border-radius: 4px; /* Rounded borders */
     padding: 8px; /* Padding inside the input */
     border: 1px solid #000; /* Solid border */
-    box-shadow: inset -4px -4px 0px 0px #4AA52E; /* Shadow effect */
+    box-shadow: inset -4px -4px 0px 0px #41cdac; /* Shadow effect */
 }
